# crypto-market-data-service

./: .dockerignore  .env  .env.example  .gitignore  API_AUTHENTICATION.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  check_env.sh  config.yaml  config.yaml.example  deploy.sh  docker-compose.yml  openresty.conf  pyproject.toml  test_auth.sh
.github/workflows/: deploy.yml
.kiro/specs/crypto-market-data-service/: design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: gap-filling.md  intelligent-gap-detection.md
src/: __init__.py  auth.py  config.py  dependencies.py  exceptions.py  main.py  models.py  repositories.py
src/api/: __init__.py  admin.py  health.py  ohlcv.py  schemas.py  ticker.py
src/infrastructure/: __init__.py  cache.py  database.py  exchange.py  scheduler.py
